// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Component - Snapshots renders all sizes correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-4 py-2.5"
  >
    Small
  </button>
</div>
`;

exports[`Button Component - Snapshots renders all sizes correctly 2`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5"
  >
    Large
  </button>
</div>
`;

exports[`Button Component - Snapshots renders all variants correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5"
  >
    Primary
  </button>
</div>
`;

exports[`Button Component - Snapshots renders all variants correctly 2`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-white text-orange-background border border-orange-background hover:bg-orange-background hover:text-white focus-visible:ring-primary px-9 py-5"
  >
    Secondary
  </button>
</div>
`;

exports[`Button Component - Snapshots renders all variants correctly 3`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-white text-orange-background border-none hover:text-primary px-9 py-5"
  >
    Tertiary
  </button>
</div>
`;

exports[`Button Component - Snapshots renders combined variants and sizes 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-white text-orange-background border border-orange-background hover:bg-orange-background hover:text-white focus-visible:ring-primary px-4 py-2.5"
  >
    Combined
  </button>
</div>
`;

exports[`Button Component - Snapshots renders disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5"
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`Button Component - Snapshots renders with complex children 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5"
  >
    <span>
      Icon
    </span>
    <span>
      Text
    </span>
  </button>
</div>
`;

exports[`Button Component - Snapshots renders with custom className 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5 custom-class"
  >
    Custom
  </button>
</div>
`;

exports[`Button Component - Snapshots renders with default props 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5"
  >
    Default Button
  </button>
</div>
`;
